# Template_MLOps_accidents

./: .dockerignore  .dvcignore  .gitattributes  .gitignore  Dockerfile  MLproject  Makefile  README.md  docker-compose.yml  dvc.yaml  init_front.sh  k8s.sh  metrics.json  params.yaml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  setup_daemon_json.sh  setup_dagshub_key.sh
.dvc/: config
.github/workflows/: python-app.yml
deployments/airflow/: Dockerfile  README.md
deployments/airflow/dags/: dvc_accidents_severity.py
deployments/nginx/: Dockerfile  nginx.conf  nginx_debug.conf
docker/api/: dockerfile  requirements.txt
docker/front/: dockerfile
k8s/: 00-namespace.yaml  01-configmap-secret.yaml  02-persistent-volumes.yaml.md  02-pvcs.yaml  03-postgres.yaml  04-mlflow.yaml  05-train-job.yaml  06-api.yaml  07-airflow.yaml  07-ingress.yaml  08-prometheus.yaml  09-grafana.yaml  10-ingress.yaml  kustomization.yaml
monitoring/grafana/: dashboard_accidents.json
monitoring/grafana/dashboards_json/: VMusage-dashboard.json  accidents-dashboard.json  containers-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml
reports/: metrics.json
src/api/: Dockerfile  config.py  main.py
src/data/: check_structure.py  generate_dummy_data.py  import_raw_data.py  make_dataset.py
src/features/: build_features.py
src/html/: TemplateInterfaceWeb.html
src/mlflow/: Dockerfile
src/models/: Dockerfile  evaluate_model.py  mlflow_utils.py  predict_model.py  register_model.py  serve_registry_model.py  test_features.json  train_api_compatible_model.py  train_model.py
src/template_mlops_accidents/: __init__.py
test/: test_structure.py
tests/: test_model.py
