[project]
name = "template-mlops-accidents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8"
dependencies = [
    "black>=24.8.0",
    "click>=8.1.8",
    "coverage>=7.6.1",
    "dvc>=3.42.0",
    "dvc-s3>=3.0.1",
    "flake8>=5.0.4",
    "imbalanced-learn>=0.12.4",
    "joblib>=1.4.2",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pytest>=8.3.5",
    "requests>=2.32.4",
    "scikit-learn>=1.3.2",
    "sphinx>=7.1.2",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
