[project]
name = "template-mlops-accidents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "click>=8.3.2",
    "coverage>=7.13.5",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "fastapi>=0.135.3",
    "flake8>=7.3.0",
    "imbalanced-learn>=0.14.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sphinx>=9.1.0",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
