[project]
name = "template-mlops-accidents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.10.5",
    "apache-airflow-providers-docker>=4.4.5",
    "apache-airflow-providers-postgres>=6.4.1",
    "black>=26.3.1",
    "click>=8.3.3",
    "coverage>=7.13.5",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "fastapi>=0.136.1",
    "flake8>=7.3.0",
    "imbalanced-learn>=0.14.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "redis<5.0.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sphinx>=9.1.0",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
